# jbytes

./: .bumpversion.cfg  CHANGELOG.md  Cargo.toml  README-zh_CN.md  README.md
.github/workflows/: publish.yml
crates/jdefault-rs/: .bumpversion.cfg  Cargo.toml  README.md
crates/jdefault-rs/src/: lib.rs
crates/jdefault-rs/src/jdefault/: attribute.rs
crates/jdefault-rs/tests/: test_jppe.rs
crates/jget-rs/: Cargo.toml  README.md
crates/jget-rs/derive/: Cargo.toml
crates/jget-rs/derive/src/: lib.rs
crates/jget-rs/derive/src/jget/: attribute.rs
crates/jget-rs/src/: lib.rs
derive/: Cargo.toml
derive/src/: lib.rs
derive/src/jbyte/: attribute.rs
derive/src/jbytes/: attribute.rs  decode.rs  derive_enum.rs  derive_struct.rs  encode.rs  mod.rs  parse.rs
examples/: buffer_example.rs  bytes_example.rs  default_value_example.rs  enum_example.rs  packet_ethernet_example.rs  packet_http_example.rs  packet_http_example_2.rs  packet_http_example_3.rs  packet_ipv4_example.rs  packet_parse_example.rs  packet_tcp_example.rs  simple_example.rs  simple_example2.rs  socket_example.rs
src/: buf_mut_traits.rs  buf_traits.rs  buffer.rs  byteorder.rs  bytes.rs  errors.rs  impls.rs  lib.rs  main.rs  modifiers.rs  take.rs  traits.rs
src/decode/: impls_array.rs  impls_bool.rs  impls_bytes.rs  impls_char.rs  impls_float.rs  impls_hashmap.rs  impls_hashset.rs  impls_hex.rs  impls_int.rs  impls_ipaddress.rs  impls_macaddress.rs  impls_mark.rs  impls_netaddress.rs  impls_option.rs  impls_other.rs  impls_string.rs  impls_tuple.rs  impls_vec.rs  mod.rs
src/encode/: impls_array.rs  impls_bool.rs  impls_bytes.rs  impls_char.rs  impls_float.rs  impls_hashmap.rs  impls_hex.rs  impls_int.rs  impls_ipaddress.rs  impls_macaddress.rs  impls_mark.rs  impls_netaddress.rs  impls_option.rs  impls_other.rs  impls_string.rs  impls_tuple.rs  impls_vec.rs  mod.rs
src/types/: hex.rs  hex_bytes.rs  hex_string.rs  mac_address.rs  mark.rs  mod.rs  net_address.rs
tests/: test.rs  test_jbyte.rs  test_modifier_bits.rs  test_modifier_branch.rs  test_modifier_branch_bits.rs  test_modifier_branch_default.rs  test_modifier_branch_range.rs  test_modifier_branch_value.rs  test_modifier_bytecount.rs  test_modifier_bytecount_disable.rs  test_modifier_bytecount_outside.rs  test_modifier_byteorder.rs  test_modifier_check_value.rs  test_modifier_count.rs  test_modifier_default.rs  test_modifier_from_str.rs  test_modifier_full.rs  test_modifier_if_expr.rs  test_modifier_key.rs  test_modifier_length.rs  test_modifier_loop_skip_starts.rs  test_modifier_offset.rs  test_modifier_remaining.rs  test_modifier_skip.rs  test_modifier_try_count.rs  test_modifier_untake.rs  test_modifier_value.rs  test_modifier_variable_name.rs  test_modifier_with.rs  test_modifier_with2.rs  test_modifier_with2_1.rs  test_modifier_with_1.rs  test_modifier_with_args.rs  test_type_enum.rs  test_type_enum_match_bytes.rs  test_type_hashmap.rs  test_type_hashset.rs  test_type_int_enum.rs  test_type_int_struct.rs
