[package]
name = "jbytes"
version = "0.1.0"
authors = [
    "jankincai <jankincai12@gmail.com>"
]
edition = "2021"
description = "This is a byte stream structured serialization and deserialization library."
repository = "https://github.com/caizhengxin/jbytes"
homepage = "https://github.com/caizhengxin/jbytes"
readme = "README.md"
# https://crates.io/category_slugs
categories = [
    "development-tools",
]
keywords = [
    "byte",
    "bytes",
    "jbytes",
]
license = "MIT OR Apache-2.0"
include = [
    "src/*",
    "tests/*",
    "benches/*",
    "examples/*",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "derive"
]

[profile.dev]
opt-level = 1
overflow-checks = false

[features]
default = ["std"]
std = [
    "jkcenum/std",
    "thiserror",
    "memchr/std",
    "aho-corasick/std"
]
derive = ["jbytes_derive"]
full = [
    "serde",
    "jbytes_derive",
]

[dependencies]
jbytes_derive = { path = "derive", version = "0.1.0", optional = true }
thiserror = { version = "1.0", default-features = false, optional = true }
thiserror-no-std = "2.0.2"
serde = { version = "1.0", default-features = false, optional = true }
jkcenum = { version = "0.3.3", default-features = false, features = ["derive"] }
memchr = { version = "2.7", default-features = false }
aho-corasick = { version = "1.1", default-features = false }

[dev-dependencies]
jbytes_derive = { path = "derive", version = "0.1.0" }
