[package]
name = "jbytes"
version = "0.3.1"
authors = [
    "jankincai <jankincai12@gmail.com>"
]
edition = "2021"
description = "This is a byte stream structured serialization and deserialization library."
repository = "https://github.com/caizhengxin/jbytes"
homepage = "https://github.com/caizhengxin/jbytes"
readme = "README.md"
# https://crates.io/category_slugs
categories = [
    "development-tools",
    "encoding",
    "parser-implementations",
]
keywords = [
    "byte",
    "bytes",
    "jbytes",
    "serialization",
    "parsing",
]
license = "MIT OR Apache-2.0"
include = [
    "src/*",
    "tests/*",
    "benches/*",
    "examples/*",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1
overflow-checks = false

[workspace]
members = [
    "derive",
    "crates/jdefault-rs",
    "crates/jget-rs",
    "crates/jget-rs/derive",
]

[features]
default = ["std"]
std = [
    "jkcenum/std",
    "thiserror",
    "memchr/std",
    "aho-corasick/std"
]
derive = ["jbytes_derive"]
jdefault = ["jdefault_derive"]
full = [
    "serde",
    "jbytes_derive",
    "jdefault_derive",
    "jget",
]

[dependencies]
jbytes_derive = { path = "derive", version = "0.3.1", optional = true }
jdefault_derive = { path = "crates/jdefault-rs", version = "0", optional = true }
jget = { path = "crates/jget-rs", version = "0", features = ["derive"], optional = true }
thiserror = { version = "1.0", default-features = false, optional = true }
thiserror-no-std = "2.0.2"
serde = { version = "1.0", default-features = false, optional = true }
jkcenum = { version = "0.3.3", default-features = false, features = ["derive"] }
memchr = { version = "2.7", default-features = false }
aho-corasick = { version = "1.1", default-features = false }

[dev-dependencies]
jbytes_derive = { path = "derive", version = "0.3.1" }
jdefault_derive = { path = "crates/jdefault-rs" }
jget = { path = "crates/jget-rs", version = "0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
