[package]
name = "jbytes_derive"
version = "0.1.0"
authors = [
    "jankincai <jankincai12@gmail.com>"
]
edition = "2021"
description = "This is a byte stream structured serialization and deserialization library."
repository = "https://github.com/caizhengxin/jbytes"
homepage = "https://github.com/caizhengxin/jbytes"
readme = "README.md"
# https://crates.io/category_slugs
categories = [
    "development-tools",
]
keywords = [
    "byte",
    "bytes",
    "jbytes",
]
license = "MIT OR Apache-2.0"
include = [
    "src/*",
    "../examples/*",
    "Cargo.toml",
    "LICENSE*",
    "../README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
virtue = "0.0"
