[package]
name = "jbytes_derive"
version = "0.1.0"
authors = [
    "jankincai <jankincai12@gmail.com>"
]
edition = "2021"
description = "This is a byte stream structured serialization and deserialization library."
repository = "https://github.com/caizhengxin/jbytes"
homepage = "https://github.com/caizhengxin/jbytes"
readme = "README.md"
# https://crates.io/category_slugs
categories = [
    "development-tools",
    "encoding",
    "parser-implementations",
    "no-std",
]
keywords = [
    "byte",
    "bytes",
    "jbytes",
    "serialization",
    "parse",
]
license = "MIT OR Apache-2.0"
include = [
    "src/*",
    "../examples/*",
    "Cargo.toml",
    "LICENSE*",
    "../README.md",
]
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
virtue = "0"
syn = { version="2", features=["full", "fold", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
